<resources>
    <string name="app_name">Movie DB</string>
    <!-- Section start -->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <!-- Section end -->

    <!-- Serching start -->
    <string name="search_title">Searching here...</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <!-- Serching end -->

    <!-- Navigator drawer start -->
    <string name="company">Framgia INC.</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_genres">Genres</string>
    <string name="nav_comunicate">Communicate</string>
    <string name="nav_comunicate_aboutus">About us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Navigator drawer end -->

    <!-- Mainscreen fragment name  start -->
    <string name="mainscreen_nowplaying">Now Playing</string>
    <string name="mainscreen_popular">Popular</string>
    <string name="mainscreen_upcoming">Up Coming</string>
    <string name="mainscrren_toprate">Top rate</string>
    <string name="msg_can_not_get_data">Can not get data</string>
    <!-- Mainscreen fragment name  start -->

    <!-- Detail Film name  start -->
    <string name="detail_overview">Overview</string>
    <string name="detail_genres">Genres</string>
    <string name="detail_actor">Actor</string>
    <string name="detail_company">Company</string>
    <!-- Detail Film name  end -->

    <!-- Search Film name  start -->
    <string name="no_result">No Result...</string>
    <string name="searching">Searching</string>
    <!-- Search Film name  end -->

    <!-- Favorite Film name  start -->
    <string name="favorite">My Favorite</string>
    <string name="msg_id_movie_already_exists">Movie exists in list my favorite</string>
    <string name="msg_had_delete">Movie is deleted in list my favorite</string>
    <string name="msg_insert_success_to_list_my_favorite">Add success to list my favorite</string>
    <string name="error_insert_failed">Add failed, please try again</string>
    <string name="msg_delete_failed">Delete failed, please try again</string>
    <!-- Favorite Film name  end -->

    <!-- Video Film name  start -->
    <string name="text_suggestions_movie">Suggestions Movie</string>
    <!-- Video Film name  end -->
</resources>

