<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_grey"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_genres_black_24dp"
            android:title="@string/nav_genres" />
    </group>

    <item android:title="@string/nav_comunicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_comunicate_aboutus" />
        </menu>
    </item>

</menu>
