<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_dove_grey"
    android:paddingBottom="@dimen/dp_18"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detailfilm">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8">
        <ImageView
            android:id="@+id/image_overview"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_overview" />
        <TextView
            android:id="@+id/text_overview"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/detail_overview"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_overview"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_date_detail"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/color_outrageous_orange"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rate_detail" />
        <TextView
            android:id="@+id/text_rate_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:textColor="@color/color_outrageous_orange"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_overview" />
        <TextView
            android:id="@+id/text_overview_detail"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/color_white"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_date_detail" />
        <ImageView
            android:id="@+id/image_rate_detail"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_18"
            android:src="@drawable/ic_star"
            android:layout_marginLeft="@dimen/dp_3"
            app:layout_constraintLeft_toRightOf="@id/text_rate_detail"
            app:layout_constraintTop_toBottomOf="@+id/text_overview"/>
        <View
            android:id="@+id/view_devider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_outrageous_orange"
            app:layout_constraintTop_toBottomOf="@id/text_overview" />
        <ImageView
            android:id="@+id/image_actor"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_18"
            android:src="@drawable/ic_actor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_overview_detail" />
        <TextView
            android:id="@+id/tv_actor"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/detail_actor"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_actor"
            app:layout_constraintTop_toBottomOf="@id/text_overview_detail" />
        <View
            android:id="@+id/view_devider_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_outrageous_orange"
            app:layout_constraintTop_toBottomOf="@id/tv_actor" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_actor_detailfilm"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_actor" />
        <ImageView
            android:id="@+id/image_genres"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_actor_detailfilm"
            app:srcCompat="@drawable/ic_genres" />
        <TextView
            android:id="@+id/text_genres"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_18"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            android:text="@string/detail_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_genres"
            app:layout_constraintTop_toBottomOf="@id/recycler_actor_detailfilm" />
        <View
            android:id="@+id/view_devider_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_outrageous_orange"
            app:layout_constraintTop_toBottomOf="@id/text_genres" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_genres_filmdetail"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_genres" />
        <ImageView
            android:id="@+id/image_company"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_genres_filmdetail"
            app:srcCompat="@drawable/ic_company" />
        <TextView
            android:id="@+id/text_company"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/detail_company"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_company"
            app:layout_constraintTop_toBottomOf="@id/recycler_genres_filmdetail" />
        <View
            android:id="@+id/view_devider_4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_outrageous_orange"
            app:layout_constraintTop_toBottomOf="@id/text_company" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_company_filmdetail"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_company" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

